testsuite/tests/typecheck/should_fail/T15883.stderr

T15883.hs:9:1: error: [GHC-55233]
    • Newtype has non-* return kind ‘TYPE rep’
    • In the newtype declaration for ‘Foo’
    Suggested fix:
      Perhaps you intended to use the ‘UnliftedNewtypes’ extension
